--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "build-prod": "ng build --configuration production --base-href \"/\"",
+    "postbuild-prod": "copy CNAME dist\\ivan-page\\browser\\",
     "deploy": "npx angular-cli-ghpages --dir=dist/ivan-page/browser"
   },
   "private": true,
